<resources>
    <string name="app_name">Sail Mull</string>
    <string name="app_info">This app provides all the information you will require to have an enjoyable experience sailing the waters around the Isle of Mull. You can retrieve weather from the weather station at Oban. You can also get your current bearing and the bearing of different locations. The chart section provides a link to a chart app.</string>
    <string name="tobermory_info">Tobermory is the main town on the Isle of Mull. Tobermory has a large pontoon with facilities including showers and laundry. There are also a large number of visitor moorings.</string>
    <string name="salen_info">Salen is a small village located halfway up the island on the east coast. With a Spar shop and the Salen hotel offering drinks, it proves an ideal anchorage.</string>
    <string name="craignure_info">Craignure is where the ferry docks from Oban. It has a drying pier to the South which is within walking distance of the Craignure Inn.</string>
    <string name="iona_info">Iona is home to Iona Abbey which was founded by St. Columba in the year 563.</string>
    <string name="staffa_info">"Staffa is an Island on the west coast. Boats leave from Tobermory and Fionnphort regularly but require booking. Fingal's Cave is one of the main attractions."</string>
    <string name="calgary_info">Calgary bay is easily accessible by boat and a 30 minute drive by car from Tobermory. The large white sandy beach makes for a fantastic picnic spot.</string>
    <string name="weather_info">Weather data is gathered from openweathermap.org. Weather station is in Oban. Press 24 hours for a detailed 24 hour forecast. Press 72 hours for a less detailed 72 hour forecast. Scroll along to see all the data.</string>
    <string name="custom_instructions">Enter some co-ordinates below to see the bearing to them from your current location.</string>
    <string-array name="mainLocations">
        <item>Tobermory</item>
        <item>Salen</item>
        <item>Craignure</item>
        <item>Iona</item>
        <item>Staffa</item>
        <item>Calgary Bay</item>
    </string-array>
    <string-array name="bearingLocations">
        <item>none</item>
        <item>Oban</item>
        <item>Tobermory</item>
        <item>Iona</item>
        <item>Staffa</item>
        <item>Custom</item>
    </string-array>

    <!-- names for the nav buttons -->
    <string name="weather_button">Weather</string>
    <string name="bearing_button">Bearing</string>
    <string name="home_button">Home</string>
    <string name="chart_button">Chart</string>
    <string name="settings_button">Settings</string>

    <string name="title_activity_weather">Weather</string>

    <string name="title_activity_bearing">Bearing</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_map">Map</string>

    <!-- Theme settings -->
    <string name="theme_header">Theme</string>
    <string name="darkmode_key">Dark Mode</string>
    <string name="darkmode_title">Dark Mode</string>
    <string name="darkmode_summary">Enable dark mode</string>

    <!-- Units settings -->
    <string name="units_header">Units</string>
    <string name="temperature_key">Temperature units</string>
    <string name="temperature_title">Temperature units</string>
    <string-array name="temp_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string name="distance_key">Distance units</string>
    <string name="distance_title">Distance units</string>
    <string-array name="distance_units">
        <item>Nautical miles</item>
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
