<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1b">

    <WebView
        android:id="@+id/chartView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/weatherButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/weather_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bearingButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/bearing_button" />

        <Button
            android:id="@+id/homeButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/home_button" />

        <Button
            android:id="@+id/mapButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/chart_button" />

        <Button
            android:id="@+id/settingsButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/settings_button"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>