<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/weatherTable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="horizontal">

                <TableRow
                    android:id="@+id/weatherRow1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/timeLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Time"
                        android:textColor="?attr/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/windLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Wind Speed"
                        android:textColor="?attr/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/directionLabel"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="Wind Direction"
                        android:textColor="?attr/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/precipitationLabel"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="Precipitation"
                        android:textColor="?attr/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/tempLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Temperature"
                        android:textColor="?attr/colorPrimaryDark" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/load24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="24 Hours" />

            <Button
                android:id="@+id/load72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="72 Hours" />
        </LinearLayout>

        <TextView
            android:id="@+id/weatherInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="?attr/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/weatherButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/weather_button"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bearingButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/bearing_button" />

        <Button
            android:id="@+id/homeButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/home_button" />

        <Button
            android:id="@+id/mapButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/chart_button" />

        <Button
            android:id="@+id/settingsButton"
            style="JSC Server"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:text="@string/settings_button"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>